fixed layout issues in the scoreboard

--- a/src/components/Scoreboard/scoreboard.css
+++ b/src/components/Scoreboard/scoreboard.css
@@ -11,14 +11,15 @@ h4 {
 }
 h3 {
   font-size: 2.5em;
-  margin-bottom: 10px;
+  margin: 10px;
 }
 h4 {
   font-size: 1.5rem;
+  margin: 10px;
 }
 
 .scoreboard {
-  margin-bottom: 10px;
+  margin-top: 20px;
 }
 
 .col-left {
@@ -29,6 +30,7 @@ h4 {
   text-align: right;
   padding-top: 20px;
   padding-right: 50px;
+  margin-bottom: 20px;
 }
 
 .alert-danger {
